construcion de tags y menu de navegacion en el html y el css, color, altura y posicion

--- a/index.html
+++ b/index.html
@@ -4,8 +4,43 @@
       <meta charset="UTF-8">
       <meta http-equiv="X-UA-Compatible" content="IE=edge">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
+      <link rel="stylesheet" href="/css/style.css">
       <title>Repositorio IEST LR</title>
    </head>
    <body>
+      <div class="">
+         <header class="content-header ">
+            <div class="navegacion">
+               <div class="nav cont-principal">
+                  <div class="nav-logo">
+                     <img src="" alt="Logo del repositorio ">
+                     <label for="">Repositorio</label>
+                     <p>del IEST La Recoleta</p>
+                  </div>
+                  <div class="contenido__menu-navegacion">
+                     <nav class="menu-navegacion">
+                        <p>
+                           <a href="#">Ir a sitio IEST LR</a>
+                        </p>
+                        <div class="menu-navegacion">
+                           <ul>
+                              <li><a href="#">Datos de Investigación</a></li>
+                           </ul>
+                           <ul>
+                              <li><a href="#">Novedades</a></li>
+                           </ul>
+                           <ul>
+                              <li><a href="#">Sobre el repositorio</a></li>
+                           </ul>
+                        </div>
+                     </nav>
+                  </div>
+               </div>
+            </div>
+            <div class="contennt-metadata ">
+
+            </div>
+         </header>
+      </div>
    </body>
 </html>
