estilizacion del logo y el titulo del logo

--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
             <div class="navegacion">
                <div class="nav cont-principal">
                   <div class="nav-logo">
-                     <img src="" alt="Logo del repositorio ">
-                     <label for="">Repositorio</label>
-                     <p>del IEST La Recoleta</p>
+                     <img src="./icons/logo.svg" alt="Logo del repositorio ">
+                     <div class="contenido-titulo">
+                        <label class="titulo-logo" for="">Repositorio</label>
+                        <p>del IEST La Recoleta</p>
+                     </div>
                   </div>
                   <div class="contenido__menu-navegacion">
                      <nav class="menu-navegacion">
                         <p>
                            <a href="#">Ir a sitio IEST LR</a>
                         </p>
-                        <div class="menu-navegacion">
+                        <div class="nav__menu-navegacion">
                            <ul>
                               <li><a href="#">Datos de Investigación</a></li>
                            </ul>
