actualizacion menu content meta data

--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
                </div>
             </div>
             <div class="contennt-metadata ">
-
+               <div class="cont-principal">
+                  <div class="ruteador">
+                     <img src="/icons/home-icon.svg" alt="">
+                  <p>Repositorio IEST La Recoleta /</p>
+                  </div>
+                  <div class="buscador-nav">
+                     <input type="search" >
+                     <img src="/icons/buscar-icon.svg" alt="">
+                  </div>
+               </div>
             </div>
             
          </header>
