agrerge la etiqueta main

--- a/index.html
+++ b/index.html
@@ -75,5 +75,8 @@
          </div>
          
       </header>
+      <main>
+         <p>Aqui pa todo el cuerpo de lapgina</p>
+      </main>
    </body>
 </html>
