Avance del seccion del metadate y buscador

--- a/index.html
+++ b/index.html
@@ -65,10 +65,10 @@
             <div class="cont-principal">
                <div class="ruteador">
                   <img src="/icons/home-icon.svg" alt="">
-               <p>Repositorio IEST La Recoleta /</p>
+                  <p>Repositorio IEST La Recoleta /</p>
                </div>
                <div class="buscador-nav">
-                  <input type="search" >
+                  <input type="search" placeholder="Proyectos y Tesis">
                   <img src="/icons/buscar-icon.svg" alt="">
                </div>
             </div>
@@ -76,7 +76,7 @@
          
       </header>
       <main>
-         <p>Aqui pa todo el cuerpo de lapgina</p>
+         
       </main>
    </body>
 </html>
