navegacion de datos y buscados culminados

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             </div>
          </div>
          <div class="contennt-metadata ">
-            <div class="cont-principal">
+            <div class="data cont-principal">
                <div class="ruteador">
                   <img src="/icons/home-icon.svg" alt="">
                   <p>Repositorio IEST La Recoleta /</p>
@@ -76,7 +76,7 @@
          
       </header>
       <main>
-         Hola mundo
+         
       </main>
    </body>
 </html>
