Card de busque terminada su estilizacion

--- a/index.html
+++ b/index.html
@@ -79,8 +79,13 @@
          <section class="contain-slider">
             <img src="/img/SliderBanner.png" alt="">
          </section>
-         <section class="cotain-busqueda main-contain">
-            
+         <section class="contain-busqueda main-contain">
+            <h3>¿Que es tas buscando?</h3>
+            <div class="contain-buscar">
+               <p>Proyectos y Tesis</p>
+               <input type="search" placeholder="Buscar">
+               <img src="/icons/buscar-icon.svg" alt="Busqueda">
+            </div>
 
          </section>
       </main>
