Card de documentos terminados

--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
          <section class="contain-slider">
             <img src="/img/SliderBanner.png" alt="">
          </section>
+
          <section class="contain-busqueda main-contain">
             <h3>¿Que es tas buscando?</h3>
             <div class="contain-buscar">
@@ -86,7 +87,45 @@
                <input type="search" placeholder="Buscar">
                <img src="/icons/buscar-icon.svg" alt="Busqueda">
             </div>
+         </section>
 
+         <section class="contai-documentation main-contain">
+            <article class="card-doc">
+               <img src="/icons/file-project-tesis.svg" alt="">
+               <div class="subtitle">
+                  <p>Tesis de Grado</p>
+               </div>
+            </article>
+            <article class="card-doc">
+               <img src="/icons/file-project-academic.svg" alt="">
+               <div class="subtitle">
+                  <p>Proyectos Academicos</p>
+               </div>
+            </article>
+         </section>
+
+         <section class="main-contain">
+            <h3>Areas Tematicas</h3>
+            <section class="contain-area">
+               <article class="card-area">
+                  <img src="/img/mecanica-de-produccion.png" alt="mecanica de produccion">
+                  <div class="subtitle">
+                     <p>Mecanica de produccion</p>
+                  </div>
+               </article>
+               <article class="card-area">
+                  <img src="/img/computacion-e-informatica.png" alt="">
+                  <div class="subtitle">
+                     <p>Computacion e Informatica</p>
+                  </div>
+               </article>
+               <article class="card-area">
+                  <img src="/img/diseño-y-programacion-web.png" alt="">
+                  <div class="subtitle">
+                     <p>Diseño y Programacion Web</p>
+                  </div>
+               </article>
+            </section>
          </section>
       </main>
    </body>
