Card de documentos terminados actualizados

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </div>
          </section>
 
-         <section class="contai-documentation main-contain">
+         <section class="contain-documentation main-contain">
             <article class="card-doc">
                <img src="/icons/file-project-tesis.svg" alt="">
                <div class="subtitle">
