--- a/index.html
+++ b/index.html
@@ -127,6 +127,15 @@
                </article>
             </section>
          </section>
+
+         <section>
+            <img src="" alt="">
+            <p>
+               El Repositorio Institucional del Instituto de Educacion Superior Tecnológico la Recoleta es una herramienta virtual que tiene por objeto 
+almacenar, conservar, preservar y difundir la creación de documentos digitales de tesis y proyectos académicos por los miembros  del 
+Instituto de Educacion Superior  Tecnológico la Recoleta.
+            </p>
+         </section>
       </main>
    </body>
 </html>
