--- a/index.html
+++ b/index.html
@@ -139,8 +139,52 @@
             </p>
          </section>
       </main>
-      <footer>
-         
+      <footer class="content-footer">
+         <div class="cont-principal cont-f">
+            <section class="section-logo">
+               <div>
+                  <img src="/icons/logo-footer.svg" alt="">
+                  <h1>Repositorio LR</h1>
+               </div>
+               <p>Repositorio virtual del Instituto de educacion superior tecnologico LA RECOLETA</p>
+            </section>
+            <section class="section-nav">
+               <article>
+                  <h4>Repositorio RL</h4>
+                  <div class="content-foot">
+                     <img src="/icons/ubicacion.svg" alt="">
+                     <ul>
+                        <li>Arequipa - peru</li>
+                        <li>ISET La Recoleta - Arequipa</li>
+                        <li>Calle Recoleta N° 117-A</li>
+                     </ul>
+                  </div>
+               </article>
+               <article>
+                  <h4>Enlaces</h4>
+                  <div class="content-foot">
+                     <img src="/icons/enlaces.svg" alt="">
+                     <ul>
+                        <li><a href="#">Documentos</a></li>
+                        <li><a href="#">Estadisticos</a></li>
+                        <li><a href="#">Acceso Abierto</a></li>
+                        <li><a href="#">IEST la Recoleta</a></li>
+                     </ul>
+                  </div>
+               </article>
+               <article>
+                  <h4>Terminos</h4>
+                  <div class="content-foot">
+                     <img src="/icons/terminos.svg" alt="">
+                     <ul>
+                        <li><a href="#">Politica</a></li>
+                        <li><a href="#">Sugerencias</a></li>
+                        <li><a href="#">Preguntas frecuentes</a></li>
+                     </ul>
+                  </div>
+               </article>
+            </section>
+         </div>
       </footer>
    </body>
 </html>
