creacion del nuevo archivo busqueda.html

--- a/index.html
+++ b/index.html
@@ -84,7 +84,10 @@
             <div class="contain-buscar">
                <p>Proyectos y Tesis</p>
                <input type="search" placeholder="Buscar">
-               <img src="/icons/buscar-icon.svg" alt="Busqueda">
+               <a href="/pages/busqueda.html">
+                  <img src="/icons/buscar-icon.svg" alt="Busqueda">
+               </a>
+               
             </div>
          </section>
 
