agregado el input

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
             <div class="nav cont-principal">
    
                <div class="nav-logo">
-                  <img src="./icons/logo.svg" alt="Logo del repositorio ">
+                  <a href="/index.html">
+                     <img src="/icons/logo.svg" alt="Logo del repositorio ">
+                  </a>
                   <div class="contenido-titulo">
                      <label class="titulo-logo" for="">Repositorio</label>
                      <p>del IEST La Recoleta</p>
