--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -10,10 +10,7 @@
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link
-        href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&family=Quicksand:wght@300;500;700&display=swap"
-        rel="stylesheet">
-
+    <link href="https://fonts.googleapis.com/css2?family=Fira+Sans:wght@200&family=Quicksand:wght@300;500;700&display=swap" rel="stylesheet">
     <title>Repositorio IEST LR</title>
 </head>
 
@@ -23,7 +20,9 @@
             <div class="nav cont-principal">
 
                 <div class="nav-logo">
-                    <img src="./icons/logo.svg" alt="Logo del repositorio ">
+                    <a href="/index.html">
+                        <img src="/icons/logo.svg" alt="Logo del repositorio ">
+                    </a>
                     <div class="contenido-titulo">
                         <label class="titulo-logo" for="">Repositorio</label>
                         <p>del IEST La Recoleta</p>
@@ -68,7 +67,7 @@
             <div class="data cont-principal">
                 <div class="ruteador">
                     <img src="/icons/home-icon.svg" alt="">
-                    <p>Repositorio IEST La Recoleta /</p>
+                    <p>Repositorio IEST La Recoleta / busqueda avanzada /</p>
                 </div>
                 <div class="buscador-nav">
                     <input type="search" placeholder="Proyectos y Tesis">
@@ -91,9 +90,12 @@
                 <input type="search" placeholder="Buscar">
                 <img src="/icons/buscar-icon.svg" alt="Busqueda">
             </div>
+            <div class="btn">
+                <input type="submit" value="Buscar">
+            </div>
         </section>
         <!-- ======================================= -->
-        
+
 
         <!-- ======================================= -->
 
