act de page web

--- a/index.html
+++ b/index.html
@@ -81,18 +81,19 @@
             <img src="/img/SliderBanner.png" alt="">
          </section>
 
-         <section class="contain-busqueda main-contain">
-            <h3>¿Que es tas buscando?</h3>
-            <div class="contain-buscar">
-               <p>Proyectos y Tesis</p>
-               <input type="search" placeholder="Buscar">
-               <a href="/pages/busqueda.html">
-                  <img src="/icons/buscar-icon.svg" alt="Busqueda">
-               </a>
-               
-            </div>
-         </section>
-
+         <div class="posicion-busqueda">
+            <section class="contain-busqueda main-contain">
+               <h3>¿Que es tas buscando?</h3>
+               <div class="contain-buscar">
+                  <p>Proyectos y Tesis</p>
+                  <input type="search" placeholder="Buscar">
+                  <a href="/pages/busqueda.html">
+                     <img src="/icons/buscar-icon.svg" alt="Busqueda">
+                  </a>
+                  
+               </div>
+            </section>
+         </div>
          <section class="contain-documentation main-contain">
             <article class="card-doc">
                <img src="/icons/file-project-tesis.svg" alt="">
