--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -79,22 +79,60 @@
     </header>
     <main>
 
-        <section class="contain-slider">
-            <img src="/img/SliderBanner.png" alt="">
+        <div class="posicion-busqueda_pb">
+            <section class="contain-busqueda contain-busqueda__pb main-contain">
+                <h3>¿Que es tas buscando?</h3>
+                <div class="contain-buscar">
+                    <p>Proyectos y Tesis</p>
+                    <input type="search" placeholder="Buscar">
+                    <img src="/icons/buscar-icon.svg" alt="Busqueda">
+                </div>
+                <!-- ======================================= -->
+                <!-- Boton buscar -->
+                <div class="btn">
+                    <input type="submit" value="Buscar">
+                </div>
+            </section>
+        </div>
+
+        <section class="content-subtitle-br">
+            <div class="main-contain">
+                <h3>Busqueda Rapida</h3>
+                <p>Resultados para los terminos buscados</p>
+            </div>  
         </section>
 
-        <section class="contain-busqueda main-contain">
-            <h3>¿Que es tas buscando?</h3>
-            <div class="contain-buscar">
-                <p>Proyectos y Tesis</p>
-                <input type="search" placeholder="Buscar">
-                <img src="/icons/buscar-icon.svg" alt="Busqueda">
-            </div>
-            <div class="btn">
-                <input type="submit" value="Buscar">
-            </div>
+        <section class="main-contain content-resultado">
+            <article>
+                <h4>Filtros</h4>
+
+                <ul>
+                    <li>
+                        Todo el repositorio
+                        <img src="" alt="">
+                    </li>
+                    <li>Areas y temas</li>
+                    <li>Autores</li>
+                    <li>Tipo de documento</li>
+                </ul>
+            </article>
+            <article>
+                <h5>Se han encontrado 5 resultados</h5>
+                <aside>
+                    <section>
+                        <div class="type-document">
+                            <h5>Tesis</h5>
+                        </div>
+                    </section>
+                    <section>
+                        <h4>Aqui va el nombre completo del la tesis  o titulo del la tesis, proyecto academico</h4>
+                    </section>
+                </aside>
+                <aside>
+
+                </aside>
+            </article>
         </section>
-        <!-- ======================================= -->
 
 
         <!-- ======================================= -->
