Creacion del archivo buuzqueda avanzada.html

--- a/pages/busqueda.html
+++ b/pages/busqueda.html
@@ -97,7 +97,7 @@
 
         <section class="content-subtitle-br">
             <div class="main-contain">
-                <h3>Busqueda Rapida</h3>
+                <h3>Busqueda Rapida Encontrada</h3>
                 <p>Resultados para los terminos buscados</p>
             </div>  
         </section>
